--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -1,3 +1,11 @@
 ﻿option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: tally/wsgi.py
+
+files:
+  "/etc/httpd/conf.d/wsgi_custom.conf":
+    mode: "000644"
+    owner: root
+    group: root
+    content: |
+      WSGIApplicationGroup %{GLOBAL}
