--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ pytextrank = "*"
 awscli = "*"
 pylint = "*"
 pyyaml = "*"
+en-core-web-sm = {file = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz"}
 
 [requires]
 python_version = "3.7"
