--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ decorator==4.4.1
 Django==3.0.2
 djangorestframework==3.11.0
 docutils==0.15.2
+en-core-web-sm==2.2.5
 graphviz==0.13.2
 idna==2.8
 importlib-metadata==1.4.0
