--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,6 @@ scattertext==0.0.2.56
 scikit-learn==0.22.1
 scipy==1.4.1
 six==1.13.0
-spacy==2.2.3
 sqlparse==0.3.0
 srsly==1.0.1
 statsmodels==0.10.2
@@ -55,4 +54,5 @@ urllib3==1.25.7
 wasabi==0.6.0
 wrapt==1.11.2
 zipp==0.6.0
+spacy>=2.0.0,<3.0.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
