--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,7 @@ awscli = "*"
 pylint = "*"
 pyyaml = "*"
 en-core-web-sm = {file = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz"}
+json2html = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
