2020-01-16 added advenced python scheduler background job example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "[powershell]": {
         "files.encoding": "utf8",
         "files.autoGuessEncoding": true
-    }
+    },
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true,
+    "python.pythonPath": "D:\\Users\\guido\\AppData\\Local\\Continuum\\miniconda3\\envs\\python3.6\\python.exe"
 }
