--- a/Pipfile
+++ b/Pipfile
@@ -13,10 +13,9 @@ spacy = "*"
 lxml = "*"
 scattertext = "*"
 pytextrank = "*"
-awscli = "*"
-pylint = "*"
 pyyaml = "*"
 en-core-web-sm = {file = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz"}
+apscheduler = "*"
 django-apscheduler = "*"
 
 [requires]
