--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-jupyterlab = "*"
 
 [packages]
 django = "*"
@@ -12,7 +11,7 @@ psycopg2-binary = "*"
 djangorestframework = "*"
 pyyaml = "*"
 lxml = "*"
-spacy = ">=2.0.0,<3.0.0"
+spacy = "<3.0.0,>=2.0.0"
 en-core-web-sm = {file = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz"}
 pytextrank = "*"
 apscheduler = ">=3.6.3"
