--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ en-core-web-sm = {file = "https://github.com/explosion/spacy-models/releases/dow
 pytextrank = "*"
 apscheduler = ">=3.6.3"
 django-apscheduler = "*"
+pandas = "*"
 
 [requires]
 python_version = "3.6"
