--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,30 @@
 APScheduler==3.6.3
 asgiref==3.2.3
 blis==0.4.1
+boto==2.49.0
+boto3==1.11.9
+botocore==1.14.9
 catalogue==1.0.0
 certifi==2019.11.28
 chardet==3.0.4
 cymem==2.0.3
 decorator==4.4.1
-Django==3.0.2
+Django==3.0.3
 django-apscheduler==0.3.0
 djangorestframework==3.11.0
+docutils==0.15.2
+gensim==3.8.1
 graphviz==0.13.2
 idna==2.8
-importlib-metadata==1.4.0
-lxml==4.4.2
+importlib-metadata==1.5.0
+jmespath==0.9.4
+joblib==0.14.1
+lxml==4.5.0
 more-itertools==8.1.0
 murmurhash==1.0.2
 networkx==2.4
 numpy==1.18.1
-pandas==0.25.3
+pandas==1.0.0
 plac==1.1.3
 preshed==3.0.2
 psycopg2-binary==2.8.4
@@ -26,14 +33,19 @@ python-dateutil==2.8.1
 pytz==2019.3
 PyYAML==5.3
 requests==2.22.0
+s3transfer==0.3.2
+scikit-learn==0.22.1
+scipy==1.4.1
 six==1.14.0
+sklearn==0.0
+smart-open==1.9.0
 spacy==2.2.3
 sqlparse==0.3.0
 srsly==1.0.1
 thinc==7.3.1
-tqdm==4.41.1
+tqdm==4.42.1
 tzlocal==2.0.0
 urllib3==1.25.8
 wasabi==0.6.0
-zipp==2.0.1
+zipp==2.1.0
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-2.2.5/en_core_web_sm-2.2.5.tar.gz
